--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 <body>
     <div class="container">
         <div class="checkmark">
-            <span>✔</span>
+            <span id="icon">✔</span> 
         </div>
-        <h1>Email confirmed successfully!</h1>
+        <h1 id="message">Email confirmed successfully!</h1>
     </div>
-</body>
 
-<script src="./index.js"></script>
+    <script src="./index.js"></script>
+</body>
 
 </html>
